UI: Minor padding tweak.

--- a/src/styles/_forms.sass
+++ b/src/styles/_forms.sass
@@ -42,7 +42,6 @@
 
 		.form-upload-file
 			margin-bottom: 0
-			padding: 0 10px
 
 			.form-upload-file
 				padding: 0
@@ -115,6 +114,9 @@
 
 		label
 			display: none
+
+		.form-upload-file
+			padding: 0 10px
 
 		.form-upload-file-meta,
 		.form-upload-file-meta li
