--- a/src/templates/dillo/macros/_communities.pug
+++ b/src/templates/dillo/macros/_communities.pug
@@ -18,7 +18,7 @@ ul.list-unstyled
 				span.summary {{ community.summary }}
 	| {% endfor %}
 
-	li
+	li(class="c-chat")
 		a.d-communities-item(
 			href="https://blender.chat/",
 			title="blender.chat")
@@ -40,9 +40,9 @@ ul.list-unstyled
 | {% endmacro %}
 
 | {% macro communities_list_sidebar(main_project, communities, project) %}
-ul.d-communities-sidebar.d-flex.flex-column.h-100.mb-0
+ul.d-communities-sidebar.d-flex.flex-column.h-100.mb-0.list-unstyled
 	| {% set is_main_project_active = (project._id == main_project._id) %}
-	li(class="{% if is_main_project_active %}is-active{% endif%}")
+	li(class="c-main{% if is_main_project_active %} is-active{% endif%}")
 		a.py-1.pr-2.d-block(
 			href="/c/",
 			title="{{ main_project.name }}")
@@ -50,7 +50,7 @@ ul.d-communities-sidebar.d-flex.flex-column.h-100.mb-0
 				img(src="{{ main_project.picture_square.thumbnail('l') }}", alt="{{ main_project.name }} logo")
 	| {% for community in communities %}
 	| {% set is_active = (project._id == community._id) %}
-	li(class="{% if is_active %}is-active{% endif%}")
+	li(class="c-{{ community.url }}{% if is_active %} is-active{% endif%}")
 		a.py-1.pr-2.d-block(
 			href="{{ url_for('posts.index', community_url=community.url) }}",
 			title="{{ community.name }}")
@@ -63,10 +63,10 @@ ul.d-communities-sidebar.d-flex.flex-column.h-100.mb-0
 			| {% endif %}
 	| {% endfor %}
 
-	li
+	li(class="c-separator")
 		hr.bg-dark
 
-	li
+	li(class="c-chat")
 		a.py-1.pr-2.d-block(
 			target="_blank",
 			href="https://blender.chat/",
