--- a/src/templates/dillo/macros/_communities.pug
+++ b/src/templates/dillo/macros/_communities.pug
@@ -21,7 +21,7 @@ ul.list-unstyled
 	li(class="c-chat")
 		a.d-communities-item(
 			href="https://blender.chat/",
-			title="blender.chat")
+			title="Meet other Blenderheads at blender.chat")
 			.d-header-logo
 				img(src="{{ url_for('static_dillo', filename='images/logo_blender_chat.png') }}", alt="blender.chat")
 
@@ -45,15 +45,16 @@ ul.d-communities-sidebar.d-flex.flex-column.h-100.mb-0.list-unstyled
 	li(class="c-main{% if is_main_project_active %} is-active{% endif%}")
 		a.py-1.pr-2.d-block(
 			href="/c/",
-			title="{{ main_project.name }}")
+			data-community-name="{{ _('All Communities') }}")
 			.d-header-logo
 				img(src="{{ main_project.picture_square.thumbnail('l') }}", alt="{{ main_project.name }} logo")
 	| {% for community in communities %}
 	| {% set is_active = (project._id == community._id) %}
 	li(class="c-{{ community.url }}{% if is_active %} is-active{% endif%}")
 		a.py-1.pr-2.d-block(
+			class="show-tooltip",
 			href="{{ url_for('posts.index', community_url=community.url) }}",
-			title="{{ community.name }}")
+			data-tooltip="{{ community.name }}")
 			| {% if community.picture_square %}
 			.d-header-logo
 				img(src="{{ community.picture_square.thumbnail('l') }}", alt="{{ community.name }} logo")
@@ -68,9 +69,10 @@ ul.d-communities-sidebar.d-flex.flex-column.h-100.mb-0.list-unstyled
 
 	li(class="c-chat")
 		a.py-1.pr-2.d-block(
+			class="show-tooltip",
 			target="_blank",
 			href="https://blender.chat/",
-			title="Meet other Blenderheads at blender.chat")
+			data-tooltip="Meet other Blenderheads at blender.chat")
 			.d-header-logo
 				img(src="{{ url_for('static_dillo', filename='images/logo_blender_chat.png') }}", alt="blender.chat")
 
