UI: Disable moment.js convert on node created/updated date.
For some reason it's giving wrong dates for some languages, just keep it in English.

--- a/src/templates/nodes/custom/dillo_post/view_embed.pug
+++ b/src/templates/nodes/custom/dillo_post/view_embed.pug
@@ -73,14 +73,13 @@
 				| {% if node.properties.download_updated %}
 				li
 					span(title="{{ node.properties.download_updated }}")
-						| {{ _('Updated') }} #[span.js-convert-date {{ node.properties.download_updated }}]
+						| {{ _('Updated') }} #[span {{ node.properties.download_updated | pretty_date }}]
 				| {% else %}
 				li
 					a.text-secondary(
-						class="js-convert-date",
 						title="{{ node._created }}",
 						href="{{ url_for('posts.view', community_url=project.url, post_shortcode=node.properties.shortcode, _external=True) }}")
-						| {{ node._created }}
+						| {{ node._created | pretty_date }}
 				| {% endif %}
 
 				| {% if is_own or is_admin %}
