UI: group Greek community with the local communities.

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -439,8 +439,9 @@ h4 .emoji
     // Lastly, local communities.
     &.c-hoy,
     &.c-hoje,
+    &.c-actu,
     &.c-oggi,
-    &.c-actu
+    &.c-σήμερα
       order: 99
 
     // Bottom, separator and chat.
