--- a/src/templates/dillo/macros/_communities.pug
+++ b/src/templates/dillo/macros/_communities.pug
@@ -52,7 +52,7 @@ ul.d-communities-sidebar.d-flex.flex-column.h-100.mb-0.list-unstyled
 	| {% for community in communities %}
 	| {% set is_active = (project._id == community._id) %}
 	li(class="c-{{ community.url }}{% if is_active %} is-active{% endif%}")
-		a.py-1.pr-2.d-block(
+		a.d-block.py-1(
 			class="show-tooltip",
 			href="{{ url_for('posts.index', community_url=community.url) }}",
 			data-tooltip="{{ community.name }}")
@@ -60,12 +60,12 @@ ul.d-communities-sidebar.d-flex.flex-column.h-100.mb-0.list-unstyled
 			.d-header-logo
 				img(src="{{ community.picture_square.thumbnail('l') }}", alt="{{ community.name }} logo")
 			| {% else %}
-			.d-header-logo.no-logo
-				i.pi-grin
+			.d-header-logo.no-logo.mx-auto
+				i.pi-grin.d-header-logo
 			| {% endif %}
 	| {% endfor %}
 
-	li(class="c-separator")
+	li(class="c-separator c-chat")
 		hr.bg-dark
 
 	li(class="c-chat")
@@ -76,6 +76,17 @@ ul.d-communities-sidebar.d-flex.flex-column.h-100.mb-0.list-unstyled
 			data-tooltip="Meet other Blenderheads at blender.chat")
 			.d-header-logo
 				img(src="{{ url_for('static_dillo', filename='images/logo_blender_chat.png') }}", alt="blender.chat")
+
+	li.mt-auto(class="c-separator", style="order: 999")
+		hr.bg-dark
+
+	li(style="order: 999")
+		a.d-block.py-1.mb-2(
+			class="show-tooltip",
+			href="{{ url_for('dillo.about') }}",
+			data-tooltip="{{ _('About Blender.Community') }}")
+			.d-header-logo.no-logo.mx-auto
+				i.pi-info.d-header-logo
 
 	//- Hide the toggle for all communities until we have more.
 		li.js-toggle-communities-flyout.mt-2
