About page: Make it clear reporting bugs is about the website.

--- a/src/templates/about.pug
+++ b/src/templates/about.pug
@@ -26,10 +26,10 @@
 						We use CommonMark for styling posts and comments. Here's a #[a(href="http://commonmark.org/help/") handy guide] on how to use it.
 						On comments, you can drag and drop an image or file on the text field and it will automagically show up.
 
-					h4.pt-3 Found a bug?
+					h4.pt-3 Found a bug on this website?
 					p.
-						blender.community runs on open source software, please #[a(href="https://github.com/armadillica/dillo/issues") report any issues] you find here.
-						Are you a web dev? Contribute to make blender.community better!
+						blender.community runs on open source software, please #[a(href="https://github.com/armadillica/dillo/issues") report any website-related issues] you find here.
+						Are you a web developer? Contribute to make blender.community better!
 
 					h4.pt-3 Can I create a new Community?
 					p.
