--- a/dillo/templates/dillo/components/_feed_trending.pug
+++ b/dillo/templates/dillo/components/_feed_trending.pug
@@ -7,7 +7,7 @@
 	ul
 		| {% for tag in trending_tags %}
 		li
-			a.btn.btn-link-primary(href="{% url 'posts_list_tag' tag %}", title="{{ tag }}")
+			a.btn-tag(href="{% url 'posts_list_tag' tag %}", title="{{ tag }}")
 				| &#35;{{ tag | truncatechars:35 }}
 		| {% endfor %}
 | {% endif %}
