--- a/dillo/templates/dillo/profile_setup.pug
+++ b/dillo/templates/dillo/profile_setup.pug
@@ -1,27 +1,26 @@
-| {% extends "dillo/base.pug" %}
+| {% extends "dillo/base_single_card.pug" %}
 | {% load i18n crispy_forms_tags %}
-| {% block head_title %}{% trans "Setup" %}{% endblock %}
-| {% block content %}
-.container.my-auto
-	.row
-		.col-md-8.mx-auto
-			.card.account.setup
-				.card-header
-					h1.card-title {{ title }}
-				.card-body
-					p {{ message }}
-					form(
-						method="post"
-						enctype="multipart/form-data",
-						id="generic_form")
-						| {% csrf_token %}
-						.form-group.mb-0
-							| {{ form | crispy }}
-							| {% block profile_setup_form_extra %} {% endblock %}
 
-							.d-flex.border-top.pt-3.mt-3
-								input.btn.btn-primary.px-5.ml-auto(
-									type="submit",
-									value="Next")
+| {% block head_title %}{% trans "Setup" %}{% endblock %}
+
+| {% block content_card %}
+.card.account.setup
+	.card-header
+		h1.card-title {{ title }}
+	.card-body
+		p {{ message }}
+		form(
+			method="post"
+			enctype="multipart/form-data",
+			id="generic_form")
+			| {% csrf_token %}
+			.form-group.mb-0
+				| {{ form | crispy }}
+				| {% block profile_setup_form_extra %} {% endblock %}
+
+				.d-flex.border-top.pt-3.mt-3
+					input.btn.btn-primary.px-5.ml-auto(
+						type="submit",
+						value="Next")
 
 | {% endblock %}
